--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-native-styled-components": "^2.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
